# EUClean

./: CMakeLists.txt  EU Clean.dev  EU Clean.layout
src/: CleanConfig.cpp  CleanConfig.h  EuCleanCentralWidget.cpp  EuCleanCentralWidget.h  QFileSelect.cpp  QFileSelect.h  eu_clean_logic.cpp  eu_clean_logic.h  main_cli.cpp  main_gui.cpp
